WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217227
[GPU Process] fast/canvas/canvas-createPattern-video-loading.html times out
https://bugs.webkit.org/show_bug.cgi?id=217227
Summary
[GPU Process] fast/canvas/canvas-createPattern-video-loading.html times out
Wenson Hsieh
Reported
2020-10-02 08:47:36 PDT
This test times out, even after implementing support for `CanvasRenderingContext2D.createPattern(HTMLVideoElement, x, y);`, due to the fact that we (incorrectly) believe that painting the video element to the canvas context will taint the document origin when GPUP is enabled.
Attachments
Patch
(2.36 KB, patch)
2020-10-02 08:53 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-10-02 08:53:01 PDT
Created
attachment 410327
[details]
Patch
EWS
Comment 2
2020-10-02 10:34:23 PDT
Comment hidden (obsolete)
Patch 410327 does not build
EWS
Comment 3
2020-10-02 10:47:11 PDT
Committed
r267888
: <
https://trac.webkit.org/changeset/267888
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 410327
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug