[GPU Process] fast/canvas/canvas-createPattern-video-loading.html times out https://bugs.webkit.org/show_bug.cgi?id=217227

Reviewed by Eric Carlson.

Even after supporting `createPattern` with video elements using the GPU process for both media and canvas
rendering, we still fail this test due to a security error that is thrown when consulting
`CanvasRenderingContext::wouldTaintOrigin`. This, in turn, is due to the fact that we never attempt to update
cached `wouldTaintDocumentSecurityOrigin` state on `MediaPlayerPrivateRemote`, so it remains `true`.

This change will be covered by fast/canvas/canvas-createPattern-video-loading.html, which should now fail with a
text diff instead of timing out due to lack of support for creating a `CanvasPattern` out of a video element.

* WebProcess/GPU/media/MediaPlayerPrivateRemote.cpp:
(WebKit::MediaPlayerPrivateRemote::updateCachedState):


Canonical link: https://commits.webkit.org/230006@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267888 268f45cc-cd09-0410-ab3c-d52691b4dbfc